<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.0</version>
        <relativePath/>
    </parent>


    <groupId>com.marinabits</groupId>
    <artifactId>energietechs</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>energietechs</name>
    <description>Energietechs</description>


    <developers>
        <developer>
            <id>0001</id>
            <name>Omar Ismail</name>
            <email>omar.pal.95@gmail.com</email>
            <roles>
                <role>
                    Sr. Backend Engineer
                </role>
            </roles>
        </developer>
        <developer>
            <id>0002</id>
            <name>Abdalrhman Alkraien</name>
            <email>abdalrhmanalkraien@gmail.com</email>
            <roles>
                <role>
                    Sr. Backend Engineer
                </role>
                <role>
                    Sr. Devops Engineer
                </role>
            </roles>
        </developer>
    </developers>


    <properties>
        <java.version>17</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!--  Dependencies versions properties  -->
        <maven.surefire.plugin.version>3.0.0</maven.surefire.plugin.version>
        <maven.failsafe.plugin.version>3.0.0</maven.failsafe.plugin.version>
        <io.jsonwebtoken.version>0.11.5</io.jsonwebtoken.version>
        <org.mapstruct.version>1.5.4.Final</org.mapstruct.version>
        <org.springdoc.version>2.1.0</org.springdoc.version>
        <opencsv.version>5.7.1</opencsv.version>
        <hipster-core.version>1.0.1</hipster-core.version>
        <datasource-proxy-sbs.version>1.8.1</datasource-proxy-sbs.version>
        <commons-collections4.version>4.4</commons-collections4.version>
        <aws-java-sdk-s3.version>1.12.565</aws-java-sdk-s3.version>
        <lombok.version>1.18.30</lombok.version>
        <commons-io.version>2.14.0</commons-io.version>
        <liquibase.verion>4.16.1</liquibase.verion>
<!--        <jib.version>3.4.0</jib.version>-->
<!--        <image.version>latest.dev</image.version>-->
    </properties>


    <dependencies>
        <!-- Start - Database, ORM, and validation dependencies -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>

        <!-- print meaningful SQL statements that were generated by any data access technology -->
        <dependency>
            <groupId>com.github.gavlyukovskiy</groupId>
            <artifactId>datasource-proxy-spring-boot-starter</artifactId>
            <version>${datasource-proxy-sbs.version}</version>

        </dependency>
        <!-- End - Database, ORM, and validation dependencies -->

        <!-- Start - Web, REST, and their OpenAPI dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${org.springdoc.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.yaml</groupId>
                    <artifactId>snakeyaml</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-hateoas</artifactId>
        </dependency>

        <!-- End - Web, REST, and their OpenAPI dependencies -->

        <!-- Start - Security dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>


        <!-- Start - JWT library for authentication libraries -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>${io.jsonwebtoken.version}</version>
        </dependency>

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>${io.jsonwebtoken.version}</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
            <version>${io.jsonwebtoken.version}</version>
            <scope>runtime</scope>
        </dependency>
        <!-- End - JWT library for authentication libraries -->
        <!-- End - Security dependencies -->

        <!-- Start - Development and Ops dependencies, and third parties libraries -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>


        <!-- Mapper library to automate model transformations -->
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${org.mapstruct.version}</version>
        </dependency>

        <!-- library for writing, reading, serializing, deserializing, and/or parsing .csv files! -->
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>${opencsv.version}</version>
            <exclusions>
                <!--
                    To fix 78f40514-81ff-403b-9960-98145caab06f
                    https://advisory.checkmarx.net/advisory/vulnerability/Cx78f40514-81ff/
                -->
                <exclusion>
                    <groupId>commons-collections</groupId>
                    <artifactId>commons-collections</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>${commons-collections4.version}</version>
        </dependency>

        <!-- Start - Testing dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- End - Testing dependencies -->

        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
            <version>${liquibase.verion}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-maven-plugin -->
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-maven-plugin</artifactId>
            <version>${liquibase.verion}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.2.4</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>2.15.3</version>
        </dependency>

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>8.2.0</version>
        </dependency>



        <!-- Start - AWS dependencies -->

        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-s3</artifactId>
            <version>${aws-java-sdk-s3.version}</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>

        <!-- End - AWS dependencies -->
    </dependencies>



    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <!-- Make final jar, a layered jar -->
                    <layers>
                        <enabled>true</enabled>
                    </layers>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <!--
                                To generate build information to be included via
                                http(s)://<hostname>:<port>/actuator/info
                             -->
                            <goal>build-info</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <enablePreview>true</enablePreview>
                    <compilerArgs>
                        <arg>-Xlint</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${org.mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                    <includes>
                        <include>**/*Tests.java</include>
                        <include>**/*Test.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.failsafe.plugin.version}</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-maven-plugin</artifactId>
                <version>${liquibase.version}</version>
                <configuration>
                    <propertyFile>src/main/resources/application.yaml</propertyFile>
                    <promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
                </configuration>
            </plugin>

<!--            <plugin>-->
<!--                <groupId>com.google.cloud.tools</groupId>-->
<!--                <artifactId>jib-maven-plugin</artifactId>-->
<!--                <version>${jib.version}</version>-->
<!--                <configuration>-->
<!--                    <from>-->
<!--                        <image>openjdk:17-oracle</image>-->
<!--                        <platforms>-->
<!--                            <platform>-->
<!--                                <architecture>amd64</architecture>-->
<!--                                <os>linux</os>-->
<!--                            </platform>-->
<!--                            <platform>-->
<!--                                <architecture>arm64</architecture>-->
<!--                                <os>linux</os>-->
<!--                            </platform>-->
<!--                        </platforms>-->
<!--                    </from>-->
<!--                    <to>-->
<!--                        <image>docker.io/abdalrhmanalkraien/energy-tech</image>-->
<!--                        <tags>-->
<!--                            <tag>${image.version}</tag>-->
<!--                            <tag>latest</tag>-->
<!--                        </tags>-->
<!--                        <auth>-->
<!--                            <username>abdalrhmanalkraien</username>-->
<!--                            <password>Aboodcent0788&amp;</password>-->
<!--                        </auth>-->
<!--                    </to>-->
<!--                    <containerizingMode>packaged</containerizingMode>-->
<!--                    <container>-->
<!--                        <jvmFlags>-->
<!--                            <jvmFlag>-Xms512m</jvmFlag>-->
<!--                            <jvmFlag>-Xdebug</jvmFlag>-->
<!--                        </jvmFlags>-->
<!--                        <ports>-->
<!--                            <port>8080</port>-->
<!--                        </ports>-->
<!--                        <format>Docker</format>-->
<!--                    </container>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>package</id>-->
<!--                        <phase>package</phase>-->
<!--                        <goals>-->
<!--                            <goal>build</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

</project>
